--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -4,12 +4,11 @@
       <!-- In case of WEB View - design for search Projects, Supplier, Generate Report and amount  -->
       <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-3 text-left showResponsiveReport column-1">
-          <mat-form-field class="border-select select-project  width100Percent font-size-vary-grn">
+          <mat-form-field class="border-select select-project width100Percent font-size-vary-grn">
             <mat-label>Select Project</mat-label>
             <mat-select formControlName="selectedProject" multiple>
               <div class="display-flex">
-                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name"
-                  [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
@@ -17,19 +16,18 @@
               <!-- <mat-select-trigger>
                     <mat-label>Select Project</mat-label>
                   </mat-select-trigger> -->
-              <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'" [value]="project"
-                selected="project.clicked" (click)="choosenProject()">{{ project.projectName }}
+              <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:['projectName']" [value]="project" selected="project.clicked" (click)="choosenProject()"
+                >{{ project.projectName }}
               </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="col-xs-5 col-sm-4 col-md-3  text-left showResponsiveReport column-2">
+        <div class="col-xs-5 col-sm-4 col-md-3 text-left showResponsiveReport column-2">
           <mat-form-field class="border-select select-project width100Percent font-size-vary-grn">
             <mat-label>Select Supplier</mat-label>
             <mat-select formControlName="selectedSupplier" multiple>
               <div class="display-flex">
-                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Supplier Name"
-                  [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Supplier Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
@@ -37,16 +35,19 @@
               <!-- <mat-select-trigger>
                     <mat-label>Select Supplier</mat-label>
                   </mat-select-trigger> -->
-              <mat-option *ngFor="let supplier of allSuppliers | SearchPipe: searchText:'supplier_name'"
-                [value]="supplier" selected="supplier.clicked" (click)="choosenSupplier()">{{ supplier.supplier_name }}
+              <mat-option
+                *ngFor="let supplier of allSuppliers | SearchPipe: searchText:['supplier_name']"
+                [value]="supplier"
+                selected="supplier.clicked"
+                (click)="choosenSupplier()"
+                >{{ supplier.supplier_name }}
               </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-6 p-t-10 add-project-btn display-flex justify-content-flex-end column-3">
           <div class="p-r-20 p-t-10">
-            <a class="font-size16 cursor-pointer" matTooltip="Download">
-              <img src="../../../../assets/images/download-po.png" /></a>
+            <a class="font-size16 cursor-pointer" matTooltip="Download"> <img src="../../../../assets/images/download-po.png" /></a>
           </div>
           <button mat-raised-button class="main-background-color main-button color-white demo-title cursor-pointer">
             Generate Report
@@ -76,7 +77,6 @@
         </div>
       </mat-menu>
 
-
       <!-- Report Default Image If No data is Present -->
       <ng-container>
         <div class="wrapper-btn-center">
@@ -101,16 +101,22 @@
                 Supplier Name
               </thead>
               <thead class="mat-header-cell material">
-                PO Awarded <br> Value (INR)
+                PO Awarded
+                <br />
+                Value (INR)
               </thead>
               <thead class="mat-header-cell material">
                 GRN Amount (INR)
               </thead>
               <thead class="mat-header-cell material">
-                Amount Paid <br> till date (INR)
+                Amount Paid
+                <br />
+                till date (INR)
               </thead>
               <thead class="mat-header-cell material">
-                Yet to be <br> paid (INR)
+                Yet to be
+                <br />
+                paid (INR)
               </thead>
             </tr>
             <mat-accordion>
@@ -151,7 +157,6 @@
                     <td class="mat-cell">3,52,552</td>
                     <td class="mat-cell">4,52,552</td>
                   </tr>
-
                 </mat-expansion-panel>
               </mat-expansion-panel>
             </mat-accordion>
@@ -166,7 +171,6 @@
           </table>
         </div>
       </ng-container>
-
     </div>
   </form>
 </div>
