--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -61,7 +61,7 @@
                 <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
               </span>
             </mat-select-trigger>
-            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country"
+            <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country"
               ><span
                 ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
                 <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
