--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -87,7 +87,7 @@
                             <span>{{ selectedCountry && selectedCountry.callingCode }}</span>
                           </span>
                         </mat-select-trigger>
-                        <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country"
+                        <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country"
                           ><span
                             ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
                             <span matTooltip="{{ country.name }}" class="limited-character universal p-r-4">{{ country.name }}</span>
@@ -177,7 +177,7 @@
                             <span class="p-r-5">{{ selectedBaseCurrency && selectedBaseCurrency.currencyCode }}</span>
                           </span>
                         </mat-select-trigger>
-                        <mat-option *ngFor="let currency of currencyList | SearchPipe: searchCurrency:'currency'" [value]="currency"
+                        <mat-option *ngFor="let currency of currencyList | SearchPipe: searchCurrency:['currency', 'currencyCode']" [value]="currency"
                           ><span
                             ><img class="width-17 p-r-10" [src]="currency.imageUrl" alt="" />
                             <span class="p-r-5">{{ currency.currency }}</span>
