--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -25,7 +25,7 @@
               <mat-icon>search</mat-icon>
             </button>
           </div>
-          <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'" [value]="project">
+          <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:['projectName']" [value]="project">
             <span>
               {{ project.projectName }}
             </span>
@@ -75,7 +75,7 @@
           </a>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <table mat-table [dataSource]="poDetails[0].projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="mat-elevation-z8 col-sm-12" formArrayName="formArr">
+      <table mat-table [dataSource]="poDetails[0].projectMaterialList | SearchPipe: searchMaterial:['materialName']" class="mat-elevation-z8 col-sm-12" formArrayName="formArr">
         <ng-container matColumnDef="Material Name">
           <th mat-header-cell *matHeaderCellDef>Material Name</th>
           <td mat-cell *matCellDef="let element; let i = index" formGroupName="{{ i }}">
