--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -44,7 +44,7 @@
     </span>
   </div>
 
-  <div *ngFor="let material of projectSelectedMaterials | SearchPipe: searchProject:'projectName'; let mati = index">
+  <div *ngFor="let material of projectSelectedMaterials | SearchPipe: searchProject:['projectName']; let mati = index">
     <ng-container *ngIf="material.projectMaterialList.length">
       <mat-accordion class="accordion-padding-zero" formArrayName="forms">
         <mat-expansion-panel [expanded]="true">
@@ -61,7 +61,7 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="col-sm-12 rfq-custom-mat-width">
+          <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:['materialName']" class="col-sm-12 rfq-custom-mat-width">
             <ng-container matColumnDef="Material Name">
               <th mat-header-cell *matHeaderCellDef>Material Name</th>
               <td mat-cell *matCellDef="let element">
