--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -47,7 +47,7 @@
 </div>
 
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
-  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
+  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplier_name']" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
     <ng-container matColumnDef="Supplier Name">
       <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
       <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i">
