--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -97,7 +97,7 @@
                       <mat-icon>search</mat-icon>
                     </button>
                   </div>
-                  <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:'categoriesName'" [value]="option" matTooltip=" {{ option.categoriesName }}">
+                  <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:['categoriesName']" [value]="option" matTooltip=" {{ option.categoriesName }}">
                     {{ option.categoriesName }}
                   </mat-option>
                 </mat-select>
