--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -70,7 +70,7 @@
                     </button>
                   </div>
 
-                  <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:'categoriesName'" [value]="option" matTooltip="{{ option.categoriesName }}">
+                  <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:['categoriesName']" [value]="option" matTooltip="{{ option.categoriesName }}">
                     {{ option.categoriesName }}
                   </mat-option>
                 </mat-select>
