--- a/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
+++ b/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
@@ -83,7 +83,11 @@
                         <mat-icon>search</mat-icon>
                       </button>
                     </div>
-                    <mat-option *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:'categoriesName'" [value]="option" matTooltip=" {{ option.categoriesName }}">
+                    <mat-option
+                      *ngFor="let option of this.filteredOption | SearchPipe: searchCategory:['categoriesName']"
+                      [value]="option"
+                      matTooltip=" {{ option.categoriesName }}"
+                    >
                       {{ option.categoriesName }}
                     </mat-option>
                   </mat-select>
