--- a/src/app/features/subscription-redirections/subscription-redirections.component.html
+++ b/src/app/features/subscription-redirections/subscription-redirections.component.html
@@ -1,10 +1,12 @@
 <app-top-header></app-top-header>
 
-<ng-container *ngIf="pageType === 0">
-    <div class="container pt-5 pb-5 redirections">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 justify-content-center text-center">
-                <mat-card class="pt-4 pb-4">
+<div class="container pt-5 pb-5 redirections">
+    <div class="row">
+
+        <div class="col-md-8 col-md-offset-2 justify-content-center text-center">
+            <mat-card class="pt-4 pb-4">
+
+                <ng-container *ngIf="pageType === 0">
                     <mat-card-content>
                         <img src="../../../assets/images/subs-thanks.png" alt="">
                         <h2 class="mt-4 mb-4" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px' ">
@@ -19,18 +21,9 @@
 
                         <p class="mt-4 font-size20">Your basic plan has been activated</p>
                     </mat-card-content>
-                </mat-card>
-            </div>
-        </div>
-    </div>
-</ng-container>
+                </ng-container>
 
-
-<ng-container *ngIf="pageType === 1">
-    <div class="container pt-5 pb-5 redirections">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 justify-content-center text-center">
-                <mat-card class="pt-4 pb-4">
+                <ng-container *ngIf="pageType === 1">
                     <mat-card-content>
                         <img src="../../../assets/images/subs-unsubscribe.png" alt="">
                         <h2 class="mt-4 mb-4" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px' ">
@@ -44,21 +37,14 @@
                             You may need to update your payment details
                         </div>
 
-                        <div class="mt-5 mb-5">
-                            <button mat-button class="brand-bg-color font-size-26px">Update Details</button>
+                        <div [ngClass]="isMobile ? 'mt-4' : 'mt-5' ">
+                            <button mat-button class="brand-bg-color pl-5 pr-5"
+                                [ngClass]="isMobile ? 'font-size20' : 'font-size-26px' ">Update Details</button>
                         </div>
                     </mat-card-content>
-                </mat-card>
-            </div>
-        </div>
-    </div>
-</ng-container>
+                </ng-container>
 
-<ng-container *ngIf="pageType === 2">
-    <div class="container pt-5 pb-5 redirections">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 justify-content-center text-center">
-                <mat-card class="pt-4 pb-4">
+                <ng-container *ngIf="pageType === 2">
                     <mat-card-content>
                         <img src="../../../assets/images/subs-payment-decline.png" alt="">
                         <h2 class="mt-4 mb-2" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px' ">
@@ -72,11 +58,40 @@
                         </div>
 
                         <div class="mt-4">
-                            <button mat-flat-button class="brand-color font-size-26px">Unsubscribe</button>
+                            <button mat-flat-button class="brand-color"
+                                [ngClass]="isMobile ? 'font-size20' : 'font-size-26px' ">Unsubscribe</button>
                         </div>
                     </mat-card-content>
-                </mat-card>
-            </div>
+                </ng-container>
+
+                <ng-container *ngIf="pageType === 3">
+                    <mat-card-content>
+                        <img src="../../../assets/images/subs-trial-expiry.png" alt="">
+                        <h2 class="mt-4 mb-2" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px' ">
+                            Free Trial Has Expired
+                        </h2>
+
+                        <div class="shadow-tag pl-4 pr-4 pt-4 pb-4" [ngClass]="!isMobile ? 'mlr-140px' : '' ">
+                            Your 3 months free trial has expired. We hope, our service were useful to you. We will keep
+                            your data and information safe with us.
+                            <br>To keep continuing our service, please choose any of our subscription plans.
+                        </div>
+
+                        <div [ngClass]="isMobile ? 'mt-4' : 'mt-5' ">
+                            <button mat-button class="brand-bg-color pl-5 pr-5"
+                                [ngClass]="isMobile ? 'font-size20' : 'font-size-26px' ">Choose Plan</button>
+                        </div>
+                    </mat-card-content>
+                </ng-container>
+
+                <ng-container *ngIf="pageType !== 3">
+                    <div class="pt-0 pb-2 text-center">
+                        <button mat-button class="brand-color">Go to Dashboard</button>
+                    </div>
+                </ng-container>
+
+            </mat-card>
         </div>
+
     </div>
-</ng-container>
+</div>
