--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -483,6 +483,23 @@ ngx-mat-drp-picker-overlay {
   }
 }
 
+.m-podr1{
+  .m-itm{
+    &:nth-child(1){
+      order: 3;
+    }
+    &:nth-child(2){
+      order: 4;
+    }
+    &:nth-child(3){
+      order: 1;
+    }
+    &:nth-child(4){
+      order: 2;
+    }
+  }
+}
+
 .mcrncy{
   img{
     width: 18px;
@@ -499,5 +516,13 @@ ngx-mat-drp-picker-overlay {
 .m-srch{
   .mat-icon-button .mat-icon{
     font-size: 20px !important;
+  }
+  .mat-form-field{
+    display: block !important;
+  }
+}
+.mtpd-2px{
+  .mat-form-field{
+    padding-top: 2px;
   }
 }
