--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -38,8 +38,8 @@
         <app-rfq-project-materials (updatedRfq)="getMaterial($event)" #projectrMaterial [existingRfq]="rfqData"> </app-rfq-project-materials>
       </mat-step>
       <mat-step stepControl="stepSecond">
-        <ng-template matStepLabel>Add Quantity & Makes</ng-template>
-        <app-rfq-quantity-makes #rfqQtyMakes [generatedRfq]="rfqMaterial" (updatedRfq)="getQuantityAndMakes($event)"> </app-rfq-quantity-makes>
+        <ng-template matStepLabel>Add Quantity & Makes{{ currentIndex }}</ng-template>
+        <app-rfq-quantity-makes *ngIf="rfqMaterial" #rfqQtyMakes [generatedRfq]="rfqMaterial" (updatedRfq)="getQuantityAndMakes($event)"> </app-rfq-quantity-makes>
       </mat-step>
       <mat-step stepControl="stepThree">
         <ng-template matStepLabel>Select Supplier</ng-template>
