rfq bid changes

--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -22,7 +22,7 @@
         <span class="info-icon info-tootip"
           ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
           <span class="info-tootip__content">
-            <div class="tooltip-table maxwidth-270-px">
+            <div class="tooltip-table maxwidth-270-px m-l-0">
               <div class="row mb-1">
                 <div class="col-sm-12">
                   <span class="p-r-0"> Total Amount : {{ paymentDetail.poAmount - paymentDetail.gstAmount | number: "1.2-2" }}</span>
