--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -267,7 +267,7 @@
         class="main-background-color main-button color-white"
       >
         <span *ngIf="!data.isEdit">Add</span>
-        <span *ngIf="data.isEdit">Save {{!imageFileSize}}{{localImg}}</span>
+        <span *ngIf="data.isEdit">Save</span>
       </button>
     </div>
   </div>
