--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -3,7 +3,7 @@ dd
   <div class="p-l-20 p-r-20 p-b-20">
     <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="projectData" [disableEditDelete]="true"></card-layout>
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-xs-12 col-md-3">
         <mat-form-field class="example-form-field border-input">
           <input matInput placeholder="Search Materials" type="search" (keyup)="applyFilter($event)" />
           <button mat-button matSuffix mat-icon-button>
@@ -12,8 +12,8 @@ dd
         </mat-form-field>
       </div>
 
-      <div class="col-xs-9 p-t-10 text-right">
-        <mat-form-field class="t-0 width-15 label-adjust">
+      <div class="col-xs-12 col-md-9 p-t-10" [ngClass]="!isMobile ? 'text-right' : ''">
+        <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-15'" class="t-0 label-adjust">
           <mat-label
             ><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">Create</span>
@@ -28,16 +28,16 @@ dd
               </mat-option>
             </mat-optgroup> -->
             <mat-optgroup class="option-select-height" label="Actions">
-              <mat-option class="height-2-em" (click)="createRfq()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded'">
+              <mat-option class="height-2-em" (click)="createRfq()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
                 Create RFQ
               </mat-option>
-              <mat-option class="height-2-em" (click)="raiseIndent()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded'">
+              <mat-option class="height-2-em" (click)="raiseIndent()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
                 Raise Indent
               </mat-option>
             </mat-optgroup>
           </mat-select>
         </mat-form-field>
-        <mat-form-field class="t-0 width-16 label-adjust">
+        <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-16'" class="t-0 label-adjust">
           <mat-label
             ><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">+Add/Edit</span>
