--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -65,7 +65,13 @@
             <ng-container matColumnDef="Material Name">
               <th mat-header-cell *matHeaderCellDef>Material Name</th>
               <td mat-cell *matCellDef="let element">
-                <div class="limited-character global" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+                <div class="limited-character global" matTooltip=" {{ element.materialName }}">
+                  <span>{{ element.materialName }}</span>
+                  <!-- Upload Image Modal Link -->
+                  <div class="add-edit-image d-block">
+                    <a href="javascript:void(0)" class="orange-text" (click)="uploadImage(element, 'rfq')">Add/Edit Image</a>
+                  </div>
+                </div>
               </td>
             </ng-container>
             <ng-container matColumnDef="Estimated Qty">
@@ -130,6 +136,28 @@
                 <app-chip [chips]="element.makes" (onUpdate)="makesUpdate($event, i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0))" class="lh30"> </app-chip>
               </td>
             </ng-container>
+
+            <ng-container matColumnDef="Attached Images">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
+                Attached Images
+              </th>
+              <td class="text-align-center" mat-cell *matCellDef="let element"
+                [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+                <!-- View image modal link -->
+                <div *ngIf="element?.documentList?.length" class="images-lists"
+                  (click)="viewAllImages(element.materialId)">
+                  <ng-container *ngFor="let img of element.documentList; let i = index">
+                    <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                  </ng-container>
+                </div>
+    
+                <ng-container *ngIf="!element?.documentList">
+                  <img src="assets/images/default-material.png" alt="default-material" class="img-fluid default-image" />
+                </ng-container>
+                
+              </td>
+            </ng-container>
+
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
