--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -139,7 +139,7 @@
                 </a>
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <table mat-table [dataSource]="project.projectMaterialList" class="mat-elevation-z8 col-sm-12">
+            <table mat-table [dataSource]="project.projectMaterialList" class="mat-elevation-z8 col-sm-12" class="rfq-final-step">
               <ng-container matColumnDef="Material Name">
                 <th mat-header-cell *matHeaderCellDef>Material Name</th>
                 <td mat-cell *matCellDef="let element">
@@ -169,6 +169,25 @@
                       {{ make }}
                     </span>
                   </ng-container>
+                </td>
+              </ng-container>
+
+              <!-- View image modal link -->
+              <ng-container matColumnDef="Attached Images">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
+                  Attached Images
+                </th>
+                <td class="text-align-center" mat-cell *matCellDef="let element">
+                  <div *ngIf="element?.documentList?.length" class="images-lists" (click)="viewAllImages(element.materialId)">
+                    <ng-container *ngFor="let img of element.documentList; let i = index">
+                      <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                    </ng-container>
+                  </div>
+      
+                  <ng-container *ngIf="!element?.documentList">
+                    <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+                  </ng-container>
+                  
                 </td>
               </ng-container>
 
