--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -107,7 +107,7 @@
 
           <!-- table -->
           <div class="add-unique-container mat-elevation-z8">
-            <table mat-table [dataSource]="project.projectMaterialList">
+            <table mat-table [dataSource]="project.projectMaterialList" class="rfq-view-step">
               <!-- Material Name Column -->
               <ng-container matColumnDef="Material Name">
                 <th class="font-size14" mat-header-cell *matHeaderCellDef>Material Name</th>
@@ -141,6 +141,25 @@
                       {{ make }}
                     </span>
                   </ng-container>
+                </td>
+              </ng-container>
+
+              <!-- View image Column -->
+              <ng-container matColumnDef="Attached Images">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
+                  Attached Images
+                </th>
+                <td class="text-align-center" mat-cell *matCellDef="let element">
+                  <div *ngIf="element?.documentList?.length" class="images-lists" (click)="viewAllImages(element.materialId)">
+                    <ng-container *ngFor="let img of element.documentList; let i = index">
+                      <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                    </ng-container>
+                  </div>
+      
+                  <ng-container *ngIf="!element?.documentList">
+                    <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+                  </ng-container>
+                  
                 </td>
               </ng-container>
 
