--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -98,7 +98,7 @@
                       </mat-select>
                     </mat-form-field>
                   </div>
-                  <div class="col-xs-7" style="padding-top: 6px;">
+                  <div class="col-xs-7">
                     <mat-form-field class="border-input w-100">
                       <input matInput type="text"
                         placeholder="{{ this.countryCode === '+91' ? 'Phone No.*' : 'Phone No.' }}"
