--- a/src/app/shared/components/subscriptions/subscriptions.component.html
+++ b/src/app/shared/components/subscriptions/subscriptions.component.html
@@ -1,5 +1,9 @@
 <div *ngIf="subscriptionsData" class="subs-data text-align-center">
-    <h2 class="mt-4 mb-4">Choose a Plan That's Right for Your Business</h2>
+    <h2 class="mt-4">Choose a Plan That's Right for Your Business</h2>
+
+    <ng-container *ngIf="trialAction">
+        <p class="mb-2 mt-2">1 MONTH FREE TRIAL</p>
+    </ng-container>
 
     <!-- <ng-container *ngIf="trialAction">
         <div class="trial-plan position-absolute">
@@ -13,11 +17,12 @@
         <mat-tab *ngFor="let subscription of subscriptionsData">
 
             <ng-template mat-tab-label>
-                <span class="sub-svtxt brand-color font-size12">(Save 30%)</span>
+                <span class="sub-svtxt brand-color" [ngClass]="isMobile ?  'font-size10' : 'font-size12' ">(Save
+                    30%)</span>
                 {{subscription.frequencyHeader}}
             </ng-template>
 
-            <div class="row d-flex flex-center mt-3 mb-5">
+            <div class="row d-flex flex-center mb-5" [ngClass]="isMobile ? 'ml-2 mr-2 mt-2' : 'mt-3' ">
 
                 <mat-card *ngFor="let plan of subscription.planList" class="col-md-3 m-10 text-left">
                     <mat-card-header>
@@ -32,22 +37,34 @@
                     <mat-card-content class="plan-limit justify-content-between">
                         <span>{{plan.planLimit.projectCount}} Project {{plan.planLimit.userCount}} Users</span>
                         <ng-container *ngIf="plan.activeSubscription === null">
-                            <button mat-raised-button class="main-background-color subs-btn"
-                                (click)="choosePlan('0', plan.planId, plan.offerCode, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">Choose
+                            <button *ngIf="trialAction" mat-button class="main-background-color subs-btn"
+                                (click)="choosePlan('1', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">Free
+                                Trial</button>
+                            <button *ngIf="!trialAction" mat-raised-button class="main-background-color subs-btn"
+                                (click)="choosePlan('0', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">Choose
                                 Plan</button>
                         </ng-container>
                         <ng-container *ngIf="plan.activeSubscription !== null">
-                            <button mat-button class="subs-link" (click)="unsubscribePlan()">Unsubscribe</button>
+                            <button mat-button class="subs-link"
+                                (click)="unsubscribePlan(plan.activeSubscription.subscriptionId)">Unsubscribe</button>
                         </ng-container>
                     </mat-card-content>
-                    <ng-container *ngIf="trialAction">
+                    <!-- <ng-container *ngIf="trialAction">
                         <p>
                             <button mat-button
                                 (click)="choosePlan('1', plan.planId, plan.offerCode, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">Select
                                 Trial</button>
                         </p>
+                    </ng-container> -->
+                    <ng-container *ngIf="isMobile">
+                        <button mat-button class="w-100" (click)="showAllFeatures($event)">
+                            <span class="float-left brand-color">Show All Features</span>
+                            <span class="material-icons float-right mt-2">
+                                keyboard_arrow_down
+                            </span>
+                        </button>
                     </ng-container>
-                    <mat-card-actions class="feat-list pt-1 pl-4 pb-3">
+                    <mat-card-actions class="feat-list pt-1 pl-4 pb-3" [ngClass]="isMobile ? 'f-hide' : '' ">
                         <ul>
                             <li *ngFor="let feature of sortFeaturesObjList(plan.planFeatureObjList)"
                                 [ngClass]="feature.available ? 'active' : 'inactive' ">
