--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -2,8 +2,8 @@
   <div class="row m-0">
     <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
       <div class="min-height">
-        <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.png" alt="construction-site-image" class="signup-image" style="width: 100%;" />
-        <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.png" alt="construction-site-image" class="login-image" style="width: 100%;" />
+        <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.jpg" alt="construction-site-image" class="signup-image" style="width: 100%;" />
+        <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.jpg" alt="construction-site-image" class="login-image" style="width: 100%;" />
       </div>
     </div>
     <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
